# arc-1

./: .bazelignore  .env  .gitignore  BUILD.bazel  DESIGNDOC.md  Makefile  README.md  WORKSPACE  executor_dns  go.mod  go.sum
builds/: h3.BUILD
docs/: arc_get.plantuml  arc_overview.plantuml  arc_register.plantuml  arc_update.plantuml  example_request.md
infra/local/: docker-compose.yaml
infra/local/data/reis/: dump.rdb
internal/dialer/: BUILD.bazel  dial.go  dial_test.go
internal/rpc/: BUILD.bazel  server.go
internal/rpc/interceptor/: BUILD.bazel  logger.go
internal/util/: http.go
pkg/arclet/: BUILD.bazel  README.md
pkg/arclet/api/: BUILD.bazel  server.go  types.go
pkg/arclet/api/proto/: BUILD.bazel  arclet.pb.go  arclet.proto
pkg/arclet/cmd/: BUILD.bazel
pkg/arclet/resources/: container.go
pkg/arclet/trackerruntime/: BUILD.bazel  container.go  db_container.go  db_container_test.go  tracker_container.go
pkg/broker/: BUILD.bazel  README.md  main.go
pkg/broker/api/: BUILD.bazel  api.go
pkg/broker/api/proto/: BUILD.bazel  register.pb.go  register.proto
pkg/broker/api/service/register/: BUILD.bazel
pkg/broker/client/: BUILD.bazel  client.go
pkg/broker/cmd/: BUILD.bazel  root.go  server.go
pkg/broker/cmd/option/: BUILD.bazel  option.go
pkg/broker/h3/: BUILD.bazel  h3.go
pkg/broker/infra/db/: BUILD.bazel  entity.go  mysql.go  redis.go
pkg/broker/logger/: BUILD.bazel
pkg/broker/msg/: BUILD.bazel  message.go
pkg/broker/schema/: .env.local  Makefile  schema.sql
pkg/broker/socket/: BUILD.bazel  const.go  handler.go  socket.go
pkg/gateway/: BUILD.bazel  main.go
pkg/gateway/api/: BUILD.bazel
pkg/gateway/api/handler/: BUILD.bazel  member.go  member_http.go  register.go
pkg/gateway/cmd/: BUILD.bazel  root.go  server.go
pkg/gateway/cmd/option/: BUILD.bazel  option.go
pkg/gateway/domain/model/: BUILD.bazel  location.go  message.go  register.go
pkg/gateway/domain/repository/: BUILD.bazel  locker.go  metadata.go  tracker.go
pkg/gateway/infra/db/: BUILD.bazel  redis.go
pkg/gateway/router/: BUILD.bazel  router.go
pkg/gateway/usecase/: BUILD.bazel  member.go  register.go
pkg/metadata/: BUILD.bazel  main.go
pkg/metadata/api/: BUILD.bazel  api.go
pkg/metadata/api/proto/: BUILD.bazel  register.pb.go  register.proto
pkg/metadata/api/service/register/: BUILD.bazel
pkg/metadata/api/service/register/proto/: BUILD.bazel  register.proto
pkg/metadata/client/: BUILD.bazel  client.go
pkg/metadata/cmd/: BUILD.bazel  root.go  server.go
pkg/metadata/cmd/option/: BUILD.bazel  option.go
pkg/metadata/domain/repository/: BUILD.bazel  member.go  register.go
pkg/metadata/infra/db/: BUILD.bazel  redis.go
pkg/metadata/router/: BUILD.bazel  router.go
pkg/metadata/usecase/: BUILD.bazel  member.go  register.go
pkg/room/: BUILD.bazel  Makefile  README.md  main.go
pkg/room/api/: BUILD.bazel  api.go
pkg/room/api/message/: BUILD.bazel  coordinator.go  permission.go  relay.go  types.go
pkg/room/api/middleware/: BUILD.bazel  coordinator.go  tunnel.go  validator.go
pkg/room/api/tunnel/: BUILD.bazel  coordinator.go  permission.go  relay.go  tunnel.go
pkg/room/client/: BUILD.bazel  client.go
pkg/room/cmd/: BUILD.bazel  client.go  coordinator.go  manager.go  root.go
pkg/room/cmd/option/: BUILD.bazel  option.go
pkg/room/infra/db/: BUILD.bazel  mysql.go  redis.go
pkg/room/logger/: BUILD.bazel  logger.go
pkg/room/manager/: db.go  manager.go
pkg/room/schema/: .env.local  schema.sql
pkg/rpc/: BUILD.bazel  server.go
pkg/rpc/interceptor/: BUILD.bazel  validator.go
pkg/scheduler/: README.md
pkg/tracker/: BUILD.bazel  README.md  main.go
pkg/tracker/api/: BUILD.bazel  api.go
pkg/tracker/api/proto/: BUILD.bazel  register.pb.go  register.proto
pkg/tracker/api/service/register/: BUILD.bazel
pkg/tracker/client/: BUILD.bazel  client.go
pkg/tracker/cmd/: BUILD.bazel  root.go  server.go
pkg/tracker/cmd/option/: BUILD.bazel  option.go
pkg/tracker/domain/model/: BUILD.bazel  member.go
pkg/tracker/domain/repository/: BUILD.bazel  register.go
pkg/tracker/h3/: BUILD.bazel
pkg/tracker/hack/: table.sql
pkg/tracker/infra/db/: BUILD.bazel  mysql.go  redis.go
pkg/tracker/logger/: BUILD.bazel
pkg/tracker/msg/: BUILD.bazel  message.go
pkg/tracker/socket/: BUILD.bazel  const.go  handler.go  message.go  message_test.go  socket.go
pkg/tracker/usecase/: BUILD.bazel  register.go
pkg/txm/: BUILD.bazel  Makefile  README.md  main.go
pkg/txm/cmd/: BUILD.bazel  root.go
pkg/txm/driver/: BUILD.bazel  README.md  cmd.go  config.go  db.go  dns.go  driver.yaml  driverserver.go  executorclient.go  geohash.go  geohash_test.go  location_history.go  logger.go  request.go  response.go
pkg/txm/driver/schema/: .env.local  Makefile  executordns.sql
pkg/txm/executor/: BUILD.bazel  Makefile  cmd.go  config.go  db.go  deletetask.go  executor.yaml  executorserver.go  logger.go  puttask.go  request.go  response.go  selecttask.go  sqlboiler.yaml  task.go  updatetask.go
pkg/txm/executor/client/: client.go
pkg/txm/executor/models/: BUILD.bazel  boil_suites_test.go  boil_table_names.go  mysql_suites_test.go  peer.go  peer_test.go
pkg/txm/executor/schema/: .env.local  BUILD.bazel  Makefile  deadlock_example.sql  schema.go  schema.sql
scripts/: expose-generated-go.sh  unlink-pb-go.sh
