load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["dial.go"],
    importpath = "github.com/Bo0km4n/arc/internal/dialer",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_grpc//:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["dial_test.go"],
    embed = [":go_default_library"],
)
