load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/metadata",
    visibility = ["//visibility:private"],
    deps = ["//pkg/metadata/cmd:go_default_library"],
)

go_binary(
    name = "metadata",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
