load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/broker/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/broker/msg:go_default_library",
        "//pkg/broker/socket:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
