load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "server.go",
    ],
    importpath = "github.com/Bo0km4n/arc/pkg/broker/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/broker/api:go_default_library",
        "//pkg/broker/cmd/option:go_default_library",
        "//pkg/broker/infra/db:go_default_library",
        "//pkg/broker/logger:go_default_library",
        "//pkg/broker/socket:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
