load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["member_http.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/gateway/api",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bo0km4n_arc//pkg/gateway/domain/model:go_default_library",
        "@com_github_bo0km4n_arc//pkg/gateway/usecase:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
