load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "server.go",
    ],
    importpath = "github.com/Bo0km4n/arc/pkg/gateway/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gateway/cmd/option:go_default_library",
        "//pkg/gateway/infra/db:go_default_library",
        "//pkg/gateway/router:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
