load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["router.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/gateway/router",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gateway/api/handler:go_default_library",
        "//pkg/gateway/cmd/option:go_default_library",
        "//pkg/gateway/domain/repository:go_default_library",
        "//pkg/gateway/infra/db:go_default_library",
        "//pkg/gateway/usecase:go_default_library",
        "//pkg/metadata/client:go_default_library",
        "//pkg/tracker/client:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
