load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["register.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/gateway/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gateway/domain/model:go_default_library",
        "//pkg/gateway/domain/repository:go_default_library",
    ],
)
