load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/metadata/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metadata/api/proto:go_default_library",
        "//pkg/metadata/usecase:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
