load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "server.go",
    ],
    importpath = "github.com/Bo0km4n/arc/pkg/metadata/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/metadata/api:go_default_library",
        "//pkg/metadata/cmd/option:go_default_library",
        "//pkg/metadata/domain/repository:go_default_library",
        "//pkg/metadata/infra/db:go_default_library",
        "//pkg/metadata/usecase:go_default_library",
        "//pkg/rpc:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
