load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/room/client",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/room/api/message:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_k0kubun_pp//:go_default_library",
    ],
)
