load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "server.go",
    ],
    importpath = "github.com/Bo0km4n/arc/pkg/tracker/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/rpc:go_default_library",
        "//pkg/tracker/api:go_default_library",
        "//pkg/tracker/cmd/option:go_default_library",
        "//pkg/tracker/domain/repository:go_default_library",
        "//pkg/tracker/infra/db:go_default_library",
        "//pkg/tracker/usecase:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
