load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "server.go",
    ],
    importpath = "github.com/Bo0km4n/arc/pkg/tracker/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/tracker/api:go_default_library",
        "//pkg/tracker/cmd/option:go_default_library",
        "//pkg/tracker/infra/db:go_default_library",
        "//pkg/tracker/logger:go_default_library",
        "//pkg/tracker/socket:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
