load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "message.go",
        "socket.go",
    ],
    importpath = "github.com/Bo0km4n/arc/pkg/tracker/socket",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/tracker/logger:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_k0kubun_pp//:go_default_library",
    ],
)
