load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "const.go",
        "handler.go",
        "socket.go",
    ],
    importpath = "github.com/Bo0km4n/arc/pkg/tracker/socket",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/tracker/h3:go_default_library",
        "//pkg/tracker/infra/db:go_default_library",
        "//pkg/tracker/logger:go_default_library",
        "//pkg/tracker/msg:go_default_library",
        "@com_github_garyburd_redigo//redis:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)
