load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["register.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/tracker/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/tracker/api/proto:go_default_library",
        "//pkg/tracker/domain/repository:go_default_library",
    ],
)
