load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/txm/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/txm/driver:go_default_library",
        "//pkg/txm/executor:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
