load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cmd.go",
        "config.go",
        "db.go",
        "executorserver.go",
    ],
    importpath = "github.com/Bo0km4n/arc/pkg/txm/executor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
