load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@build_stack_rules_proto//go:go_grpc_compile.bzl", "go_grpc_compile")

proto_library(
    name = "arclet_proto",
    srcs = ["arclet.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "arclet_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/Bo0km4n/arc/pkg/arclet/api/proto",
    proto = ":arclet_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":arclet_go_proto"],
    importpath = "github.com/Bo0km4n/arc/pkg/arclet/api/proto",
    visibility = ["//visibility:public"],
)

#keep
go_grpc_compile(
    name = "proto_buf",
    deps = ["arclet_proto"],
)
