load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["register.go"],
    importpath = "github.com/Bo0km4n/arc/pkg/gateway/api/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gateway/usecase:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
